# group-live-tracker

./: .gitignore  Cargo.toml  README.md  Trunk.toml  dev.sh  home.html  index.html  index.scss  nginx  prod.sh
.github/workflows/: gh_pages.yml
ARCHIVE/: ARCHIVE_get_username_component.rs  app_with_map.rs  lib.bak.rs  map.bak.rs
frontend/: Cargo.toml  Trunk.toml  index.html  index.scss  tailwind.config.js
frontend/src/: app.rs  common.rs  geo_loc_component.rs  get_username_component.rs  main.rs  map_component.rs  router.rs  store.rs  websocket_chat_component.rs  websocket_component.rs  websocket_geoloc_component.rs  websockets_common.rs
frontend/src/api/: mod.rs  types.rs  user_api.rs
frontend/src/components/: alert.rs  form_input.rs  header.rs  loading_button.rs  mod.rs  spinner.rs
frontend/src/pages/: geo_loc_component.rs  home_page.rs  login_page.rs  map_component.rs  mod.rs  users_component.rs  websocket_chat_component.rs  websocket_geoloc_component.rs
frontend/styles/: README.md
server/: Cargo.toml  build.rs
server/assets/: script.js
server/migrations/: 20240226_1558_initial.sql
server/src/: api_auth.rs  api_authorize_jwt.rs  api_user.rs  auth_jwt.rs  db.rs  errors_and_responses.rs  main.rs  route_gpx.rs  state.rs  user.rs  ws_handler.rs
server/tests/data/: 2024-02-19_1444960792_MJ 19_02.geojson  2024-02-19_1444960792_MJ 19_02.gpx
src/: main.rs  map_component.rs
src/chat/: chat_model.rs
