[package]
name = "group-live-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.9.0"
websocket = "0.27.0"
tokio = { version = "1.32.0", features = ["full"] }
clap = "3"
env_logger = "0.11.2"
serde_json = "1.0.113"
log = "0.4.20"
anyhow = "1.0.79"
chrono = "0.4.34"
signal = { git = "https://github.com/webrtc-rs/webrtc" }
