[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = { version = "0.11.0", features = ["net"] }
gloo-utils = "0.2.0"
leaflet = "0.4.0"
log = "0.4.17"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = ["WebSocket"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
