[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = { version = "0.11.0", features = ["net"] }
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
js-sys = "0.3.68"
leaflet = "0.4.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.68", features = [
    "WebSocket",
    "Location",
    "Coordinates",
    "Geolocation",
    "PositionOptions",
    "Position",
    "PositionError",
    "Navigator",
    "Window",
] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
yewdux = "0.9.0"
validator = { version = "0.16.0", features = ["derive"] }
reqwasm = "0.5.0"
