[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["full", "fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
serde = { version = "1.0.196", features = ["derive"] }
